work around IE7 scrollbar issues in drop-down lists
git-svn-id: file:///home/awy/mirror/slim/trunk/server@17845 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/ie7.css
+++ b/HTML/Default/ie7.css
@@ -38,3 +38,13 @@
 .x-tabs-item-body {
 	height: 0;
 }
+
+.x-menu-list {
+	overflow: hidden;
+	min-width: 160px;
+}
+
+.settings .x-menu-list {
+	overflow: auto;
+}
+
